@@ -1,0 +1,11 @@
+<html>
+    <head>
+	<title><?= $this->title ?></title>
+    </head>
+    <body>
+	<h2><?= $this->title ?></h2>
+	<div>
+	    <?= $this->content ?>
+	</div>
+    </body>
+</html>
