@@ -1,0 +1,8 @@
+<?php
+
+class Knowledgeroot_Db_Content_History extends Knowledgeroot_Db_Table_Abstract
+{
+	protected $_name = 'content_history';
+	protected $_primary = 'id';
+	protected $_sequence = 'seq_content_history';
+}
